testsuite/tests/grammar/invalid_list/common.lkt
@abstract
class FooNode implements Node[FooNode] {
}
